harbor/harbor-ingress_Ingress_harbor.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/proxy-body-size: '0'
    ingress.kubernetes.io/ssl-redirect: 'true'
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/proxy-body-size: '0'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
  labels:
    app.kubernetes.io/instance: harbor
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: harbor
    helm.sh/chart: harbor-16.1.2
  name: harbor-ingress
  namespace: harbor
spec:
  ingressClassName: cilium
  rules:
  - host: harbor.ocf.berkeley.edu
    http:
      paths:
      - backend:
          service:
            name: harbor-portal
            port:
              name: http
        path: /
        pathType: Prefix
      - backend:
          service:
            name: harbor-core
            port:
              name: http
        path: /api/
        pathType: Prefix
      - backend:
          service:
            name: harbor-core
            port:
              name: http
        path: /service/
        pathType: Prefix
      - backend:
          service:
            name: harbor-core
            port:
              name: http
        path: /v2
        pathType: Prefix
      - backend:
          service:
            name: harbor-core
            port:
              name: http
        path: /chartrepo/
        pathType: Prefix
      - backend:
          service:
            name: harbor-core
            port:
              name: http
        path: /c/
        pathType: Prefix
  tls:
  - hosts:
    - harbor.ocf.berkeley.edu
    secretName: harbor.ocf.berkeley.edu-tls
